--- a/portfolio/app/globals.css
+++ b/portfolio/app/globals.css
@@ -4,3 +4,19 @@ html {
     scroll-padding-top: 1rem;
     scroll-behavior: smooth;
 }
+
+@keyframes fadeInSlideUp {
+  0% {
+    opacity: 0;
+    transform: translateY(20px); /* Starts slightly below its final position */
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+/* Create a utility class that uses the animation */
+.animate-fadeInSlideUp {
+  animation: fadeInSlideUp 1s ease-in forwards; /* 0.6s duration */
+}
